[package]
name = "rsdbgen"
version = "0.1.0"
authors = ["Brian Victor <github@brianhv.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codegen = "0.1.3"
Inflector = "0.11.4"
itertools = "0.9.0"
anyhow = "1.0.71"

sqlx = { version = "0.6.3", features = [
  "runtime-tokio-rustls",
  "postgres",
  "migrate",
  "chrono",
  "uuid",
  "offline",
] }
tokio = { version = "1.28.2", features = ["full"] }
uuid = { version = "1.3.4", features = ["serde", "v4"] }
